CH8-Istio/istio_lab/virtual_service_lb.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog-lb
spec:
  hosts:
  - catalog
  http:
  - route:
    - destination:
        host: catalog
        subset: v1
    - destination:
        host: catalog
        subset: v2
